--- a/index.html
+++ b/index.html
@@ -40,7 +40,143 @@
     </header>
 
     <section class="about-section">
-        
+        <div class="about-container container">
+            <div class="about-info-container">
+                <h1 class="titles">About the Podcast</h1>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<br>
+                    We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>
+                    and share stories of personal growth from industry leaders.
+                    <br><br>
+                    Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                </p>
+            </div>
+            <hr class="line">
+            <div class="numbers-containder">
+                <div class="numbers-info">
+                    <h3>150K+</h3>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="numbers-info">
+                    <h3>200+</h3>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="numbers-info">
+                    <h3>4.9 ★</h3>
+                    <p>Average Rating</p>
+                </div>
+                <div class="numbers-info">
+                    <h3>50+</h3>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <section class="why">
+        <div class="why-container container">
+            <h1 class="titles">Why Choose TechWave</h1>
+            <div class="cards-container">
+                <div class="card" id="side">
+                    <img src="./assets/headphone.png" alt="">
+                    <h4>Premium Audio Quality</h4>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class="card" id="side-horizontally">
+                    <img src="./assets/device.png" alt="">
+                    <h4>Mobile Friendly</h4>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div class="card" id="side-horizontally">
+                    <img src="./assets/location.png" alt="">
+                    <h4>Global Community</h4>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="card" id="side-horizontally">
+                    <img src="./assets/device.png" alt="">
+                    <h4>Exclusive Interviews</h4>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/resource.png" alt="">
+                    <h4>Rich Resources</h4>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="episode-section">
+        <div class="episode-container container">
+            <h1 class="titles">Featured Episodes</h1>
+            <div class="yt-card-container">
+                <div class="yt-card">
+                    <iframe width="380" height="214" src="https://www.youtube.com/embed/m_GBmz_t-Zs?si=rBdJlnjJ4z1bq86n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <div class="yt-card-info">
+                        <h2>The Future of AI in Everyday Life</h2>
+                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                        <div class="green-text"><img src="./assets/clock.png" alt=""> 42 min</div>
+                    </div>
+                </div>
+                <div class="yt-card">
+                    <iframe width="380" height="214" src="https://www.youtube.com/embed/m_GBmz_t-Zs?si=rBdJlnjJ4z1bq86n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <div class="yt-card-info">
+                        <h2>Building Better Habits for Remote Work</h2>
+                        <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                        <div class="green-text"><img src="./assets/clock.png" alt=""> 35 min</div>
+                    </div>
+                </div>
+                <div class="yt-card">
+                    <iframe width="380" height="214" src="https://www.youtube.com/embed/m_GBmz_t-Zs?si=rBdJlnjJ4z1bq86n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <div class="yt-card-info">
+                        <h2>Career Growth in Tech: A Roadmap</h2>
+                        <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                        <div class="green-text"><img src="./assets/clock.png" alt=""> 51 min</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="host-section container">
+            <h1 class="titles">Meet the Host</h1>
+            <div class="host-container">
+                <div class="host-img"><img src="./assets/host.png" alt=""></div>
+                <div class="host-info">
+                    <h2>Alex Kumar</h2>
+                    <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="host-icon">
+                        <div class="host-icon-img"><img src="./assets/linkedin.png" alt=""></div>
+                        <div class="host-icon-img"><img src="./assets/x.png" alt=""></div>
+                        <div class="host-icon-img"><img src="./assets/instagram.png" alt=""></div>
+                        <div class="host-icon-img"><img src="./assets/youtube.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer id="footer-section">
+        <div class="footer-section container">
+            <div class="footer-logo nav-logo"><h1>Tech<span class="colored-font">Wave</span></h1></div>
+            <div class="footer-icon-container">
+                <div class="footer-icon-info">
+                    <div class="footer-icon-img"><img src="./assets/spotify.png" alt=""></div>
+                    <p>Spotify</p>
+                </div>
+                <div class="footer-icon-info">
+                    <div class="footer-icon-img"><img src="./assets/apple-podcast.png" alt=""></div>
+                    <p>Apple Podcasts</p>
+                </div>
+                <div class="footer-icon-info">
+                    <div class="footer-icon-img"><img src="./assets/youtube-podcast.png" alt=""></div>
+                    <p>YouTube</p>
+                </div>
+                <div class="footer-icon-info">
+                    <div class="footer-icon-img"><img src="./assets/twitter.png" alt=""></div>
+                    <p>Twitter</p>
+                </div>
+            </div>
+            <div class="copywrite-text"><p>&copy; 2026 TechWave Podcast. All rights reserved.</p></div>
+        </div>
+    </footer>
 </body>
 </html>
