again another update

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h1 class="titles">Featured Episodes</h1>
             <div class="yt-card-container">
                 <div class="yt-card">
-                    <iframe width="380" height="214" src="https://www.youtube.com/embed/m_GBmz_t-Zs?si=rBdJlnjJ4z1bq86n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="380" height="214" src="https://www.youtube.com/embed/aEUm01FFsjU?si=K1yDBtlYpMA-XbsN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <div class="yt-card-info">
                         <h2>The Future of AI in Everyday Life</h2>
                         <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
